# skywatch

./: .env  .gitignore  README.md  docker-compose.yaml  project-tree.md  pyproject.toml  update-host.sh
airflow/dags/: 01_bronze_load_aqi_weather.py  02_dbt_load_aqi_weather.py  02_silver_load_aqi_weather.py  03_dbt_load_aqi_weather.py  03_gold_load_aqi_weather.py  aqi_scraper.py  aqi_scraper_iceberg.py  config.yaml  gold_load_aqi_weather.py  load_aqi_weather.py  scraper_aqi_iceberg.py  scraper_weather_iceberg.py  silver_load_aqi_weather_v2.py  weather_scraper.py  weather_scraper_iceberg.py
airflow/dbt/: .user.yml  profiles.yml
docker-conf/metastore/: Dockerfile.metastore  entrypoint.sh  init-db.sql
docker-configs/metastore/: Dockerfile.metastore
docker-configs/postgres/: 01-init-airflow.sql  01-init-hive-metastore.sql  02-init-metabase.sql  02-init-metabase_bu.sql
notebooks/: 1_load_test.ipynb  2_load_test_parquet.ipynb  3_load_test_parquet_partition.ipynb  99_drop_table_n_folder.ipynb  example.ipynb  load-to-deltalake.ipynb  load-to-iceberg.ipynb  test-connect-spark.ipynb  test-load.ipynb
notebooks/.ipynb_checkpoints/: read-parquet-checkpoint.ipynb  spark-load-to-iceberg-checkpoint.ipynb  test-connect-2-checkpoint.ipynb  (+2 more)
notes/: CASE_aqi.sql  backup_metabase.md  gold_query.sql  mermaid.md  query.sql  query1.md  re-run.md  scraper_aqi_iceberg.py  scraper_aqi_weather.py  scraper_weather_iceberg.py  silver-sql.sql  silver_load_aqi_weather.py  try-catch.md  weather_scraper.py
scraps/: config.yaml  debug-html.py  save-html.py  test_1.py  test_2.py  test_3.py
(+16 files in other folders)
