[project]
name = "skywatch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pyiceberg[hive]>=0.10.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "trino>=0.336.0",
]
